# forgepass

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
src/forgepass/: generator.py  password.py
src/forgepass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_generator.py
